# knowted-mono

./: .gitattributes  .gitignore  .mise.toml  CICD_SETUP.md  CLEANUP_OLD_CICD.sh  README.md  package.json
.github/: DIGITALOCEAN_SETUP.md
.husky/: pre-commit
aiagent/: .gitignore  Dockerfile  README.md  knowted_agent.py  langgraph.json  pyproject.toml  requirements.txt
aiagent/command/: __init__.py  chat.py
aiagent/memory/: __init__.py  checkpointer.py
aiagent/prompts/: __init__.py
aiagent/rag/: __init__.py  retriever.py  vector_store.py
aiagent/tools/: __init__.py
aiagent/tools/calendar/: __init__.py  calendar_tools.py
aiagent/tools/core/: __init__.py  api_tools.py  calculator_tool.py  time_tool.py  user_context_tool.py
aiagent/tools/meetings/: __init__.py  meeting_tools.py  meeting_type_tools.py
aiagent/tools/organizations/: __init__.py  organization_tools.py
aiagent/tools/permissions/: __init__.py  permission_tools.py
aiagent/tools/profiles/: __init__.py  profile_tools.py
aiagent/tools/reports/: __init__.py  report_tools.py
aiagent/tools/search/: __init__.py  rag_tool.py  smart_search_tool.py
aiagent/tools/teams/: __init__.py  team_tools.py
aiagent/tools/utils/: __init__.py  context_binder.py  ui_helpers.py  user_context_fetcher.py
client/: .env.example  .gitignore  .openapi-generator-config.json  INVITATION_URL_GUIDE.md  README.md  STRIPE_INTEGRATION.md  SUBSCRIPTION_SYSTEM.md  assets.config.ts  babel.config.js  capacitor.config.ts  eslint.config.js  index.html  orval.config.ts  package.json  pnpm-lock.yaml  pricing.html  (+5 more)
(+553 files in other folders)
