[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowted-aiagent"
version = "0.1.0"
description = "Knowted AI Agent - LangGraph-based AI agent for meeting analysis and insights"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-anthropic>=1.0.2",
    "deepagents",
    "langgraph-cli[inmem]>=0.4.7",
    "langgraph-api>=0.5.6",
    "langgraph>=1.0.2",
    "langgraph-checkpoint>=3.0.1",
    "langgraph-checkpoint-postgres",
    "langchain-community",
    "langchain-openai",
    "langchain-postgres",
    "pgvector",
    "httpx",
    "psycopg2-binary",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = "."
include = ["agents*", "memory*", "rag*", "tools*"]
exclude = ["venv*", "__pycache__*", "*.pyc"]

[tool.setuptools.package-data]
"*" = ["*.json"]

